--- a/node-zod/package.json
+++ b/node-zod/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "morgan": "^1.10.0"
+    "mongodb": "^5.7.0",
+    "morgan": "^1.10.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
