--- a/node-zod/.eslintrc
+++ b/node-zod/.eslintrc
@@ -6,7 +6,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": [
-      "./tsconfig.json"
+      "./node-zod/tsconfig.json"
     ]
   },
   "extends": "airbnb-typescript/base",
